--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       inset: 0;
       background:
         radial-gradient(circle at center, rgba(2, 6, 23, 0) 0%, rgba(2, 6, 23, 0.65) 60%, #020617 100%),
-        url("Logo Nova_page-0001 (1).png") no-repeat center center;
+        url("logo-canarinhos.png") no-repeat center center;
       background-size: 900px auto;
       opacity: 0.12;
       pointer-events: none;
@@ -1450,4 +1450,5 @@ setInterval(loadFromSheet, 3000);
   </script>
 </body>
 </html>
+
 
