--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
       position: relative;
       overflow-x: hidden;
     }
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background:
-        radial-gradient(circle at center, rgba(2, 6, 23, 0) 0%, rgba(2, 6, 23, 0.65) 60%, #020617 100%),
-        url("logo-canarinhos.png") no-repeat center center;
-      background-size: 900px auto;
-      opacity: 0.12;
-      pointer-events: none;
+   body::before {
+  background: radial-gradient(circle at center, rgba(2, 6, 23, 0) 0%, rgba(2, 6, 23, 0.65) 60%, #020617 100%),
+              url("logo-canarinhos.png") no-repeat center center;
+  background-size: 900px auto;
+  content: "";
+  position: fixed;
+  inset: 0;
+  opacity: 0.1;
+  pointer-events: none;
+}
+
       z-index: -1;
     }
     header {
@@ -306,16 +307,16 @@
 </head>
 <body>
   <header>
-    <div class="header-left">
-      <img src="Logo Nova_page-0001 (1).png" alt="Transportes Canarinho" class="logo-icon" />
-      <div>
-        <h1>Transportes Canarinho</h1>
-        <div class="small">Buscando entregar o melhor com qualidade.</div>
-      </div>
+  <div class="header-left">
+    <img src="logo-canarinhos2.png" alt="Transportes Canarinho" class="logo-icon" />
+    <div>
+      <h1>Transportes Canarinho</h1>
+      <div class="small">Buscando entregar o melhor com qualidade.</div>
     </div>
-    <div class="header-center">ESTOQUE DE PNEUS</div>
-    <span class="tag" id="saveStatus">autosave ativo</span>
-  </header>
+  </div>
+  <div class="header-center">ESTOQUE DE PNEUS</div>
+</header>
+
 
   <main>
     <div class="tabs">
@@ -1450,5 +1451,6 @@ setInterval(loadFromSheet, 3000);
   </script>
 </body>
 </html>
+
 
 
