--- a/index.html
+++ b/index.html
@@ -809,12 +809,12 @@
           </div>
         </div>
 
-        <!-- Botões de Ação para Estoque - MODIFICADO -->
+        <!-- Botões de Ação para Estoque - MODIFICADO (REMOVIDOS OS BOTÕES) -->
         <div class="controls-row" style="margin-bottom: 25px;">
           <button onclick="openAddPneuModal()" class="btn-success">
             Adicionar Pneu ao Estoque
           </button>
-          <!-- REMOVIDOS: Botões Retirar do Estoque e Excluir Pneu -->
+          <!-- BOTÕES "Retirar do Estoque" e "Excluir Pneu" REMOVIDOS -->
         </div>
 
         <div class="table-card">
