--- a/index.html
+++ b/index.html
@@ -895,19 +895,22 @@
             <button onclick="exportStockToExcel()" class="btn-success">
               Exportar Excel
             </button>
+            <button onclick="generateStockReport()" class="btn-success">
+              Atualizar Relatório
+            </button>
           </div>
         </div>
 
         <!-- Tabs dos Containers -->
         <div class="container-tabs">
           <div class="container-tab active" data-container="container1">
-            📦 Container 1
+            Container 1
           </div>
           <div class="container-tab" data-container="container2">
-            📦 Container 2
+            Container 2
           </div>
           <div class="container-tab" data-container="container3">
-            📦 Container 3
+            Container 3
           </div>
         </div>
 
